@@ -267,6 +267,13 @@ $reports->addReport(RC_INVENTORY, 308, _('C&osted Inventory Movement Report'),
 			_('Comments') => 'TEXTBOX',
 			_('Orientation') => 'ORIENTATION',
 			_('Destination') => 'DESTINATION'));				
+$reports->addReport(RC_INVENTORY, 309,_('Item &Sales Summary Report'),
+	array(	_('Start Date') => 'DATEBEGINM',
+			_('End Date') => 'DATEENDM',
+			_('Inventory Category') => 'CATEGORIES',
+			_('Comments') => 'TEXTBOX',
+			_('Orientation') => 'ORIENTATION',
+			_('Destination') => 'DESTINATION'));				
 
 $reports->addReportClass(_('Manufacturing'), RC_MANUFACTURE);
 $reports->addReport(RC_MANUFACTURE, 401, _('&Bill of Material Listing'),
